tests/ui/field_projections/deny-drop-impl.stderr
error[E0120]: the `Drop` trait may only be implemented for local structs, enums, and unions
  --> $DIR/deny-drop-impl.rs:8:15
   |
LL | impl Drop for field_of!(MyStruct, 0) {
   |               ^^^^^^^^^^^^^^^^^^^^^^ must be a struct, enum, or union in the current crate
   |
   = note: this error originates in the macro `field_of` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0120`.
